--- a/singlespark.yml
+++ b/singlespark.yml
@@ -15,12 +15,14 @@
        dest: /home/ubuntu
        remote_src: True
        owner: ubuntu
-   - name: Extract spark
-     ansible.builtin.unarchive:
-       src: /home/ubuntu/spark-deep-learning-154e7a68dffc9e94d83099216e8d1b98d5a0f566.zip
-       dest: /home/ubuntu
-       remote_src: True
-       owner: ubuntu
+   #- name: Extract spark
+   #  ansible.builtin.unarchive:
+    #   src: /home/ubuntu/spark-deep-learning-154e7a68dffc9e94d83099216e8d1b98d5a0f566.zip
+    #   dest: /home/ubuntu
+    #   remote_src: True
+   - name: unzip sparkdl
+     raw: unzip spark-deep-learning-154e7a68dffc9e94d83099216e8d1b98d5a0f566.zip
+#   owner: ubuntu
    - name: Extract spark
      ansible.builtin.blockinfile:
        dest: .bashrc
@@ -41,7 +43,7 @@
        backup: yes
 
    - name: changing directory from spark-3.2.1 to spark
-     raw: mv spark-3.0.3-bin-hadoop2.7 spark/
+     raw: mv spark-2.4.8-bin-hadoop2.7 spark/
    - name: changing directory from sparkdl to spark
      raw: mv spark-deep-learning-154e7a68dffc9e94d83099216e8d1b98d5a0f566 deep-learning:1.5.0-spark2.4-s_2.1/
    - name: changing directory from spark conf template to spark conf
