--- a/singlespark.yml
+++ b/singlespark.yml
@@ -33,6 +33,7 @@
        dest: /home/ubuntu
        remote_src: True
        owner: ubuntu
+   - name: Editing bashrc
      ansible.builtin.blockinfile:
        dest: .bashrc
        insertafter: EOF
