--- a/spark-url.yml
+++ b/spark-url.yml
@@ -8,9 +8,9 @@
        insertafter: EOF
        block: |
          spark.master yarn
-         spark.driver.memory 512m
-         spark.yarn.am.memory 512m
-         spark.executor.memory 512m
+         spark.driver.memory 3g
+         spark.yarn.am.memory 3g
+         spark.executor.memory 3g
          spark.eventLog.enabled true
          spark.eventLog.dir hdfs://ec2-3-216-9-20.compute-1.amazonaws.com:9000/spark-logs
          spark.history.provider org.apache.spark.deploy.history.FsHistoryProvider
