--- a/zookeeper.yml
+++ b/zookeeper.yml
@@ -15,14 +15,14 @@
        dest: /home/ubuntu
        remote_src: True
        owner: ubuntu       
-   - name: changing name
-     raw: mv apache-zookeeper-3.8.0-bin zookeeper
-   - name: Transferring files to usr/local directory
-     raw: sudo rm -f -r /usr/local/zookeeper     
-   - name: Transferring files to usr/local directory
-     raw: mv zookeeper /usr/local/zookeeper
-   - name: creating data directory
-     raw: mkdir /usr/local/zookeeper/data  
+#   - name: changing name
+#     raw: mv apache-zookeeper-3.8.0-bin zookeeper
+#   - name: Transferring files to usr/local directory
+#     raw: sudo rm -f -r /usr/local/zookeeper     
+#   - name: Transferring files to usr/local directory
+#     raw: mv zookeeper /usr/local/zookeeper
+#   - name: creating data directory
+#     raw: mkdir /usr/local/zookeeper/data  
    - name: creating myid file
      raw: sudo touch /usr/local/zookeeper/data/myid
    - name: Editing zoo.cfg File
