--- a/install-hadoop.yml
+++ b/install-hadoop.yml
@@ -68,6 +68,8 @@
          export PATH=$PATH:$SPARK_HOME/bin
          export LD_LIBRARY_PATH=$HADOOP_HOME/lib/native:$LD_LIBRARY_PATH
          export PYTHONPATH=$SPARK_HOME/python:$SPARK_HOME/python/build:$PYTHONPATH
+         export ZOO_HOME=/usr/local/zookeeper-3.4.6
+         export PATH=$ZOO_HOME/bin:$PATH
           function sparknotebook()
           {
           export PYSPARK_PYTHON=python3
