--- a/zookeeper.yml
+++ b/zookeeper.yml
@@ -43,7 +43,37 @@
    - name: Make dir hadoop
      raw: sudo chown ubuntu:ubuntu -R hadoop/hdfs/data
    - name: USER rights owning bin
-     raw: sudo chown $USER:$USER /usr/local/zookeeper/bin  
+     raw: sudo chown $USER:$USER /usr/local/zookeeper/bin 
+   - name: Editing Bash File
+     
+     ansible.builtin.blockinfile:
+       dest: .bashrc
+       insertafter: EOF
+       block: |
+         export HADOOP_HOME=/usr/local/hadoop
+         export PATH=$PATH:$HADOOP_HOME/bin
+         export PATH=$PATH:$HADOOP_HOME/sbin
+         export HADOOP_MAPRED_HOME=${HADOOP_HOME}
+         export HADOOP_COMMON_HOME=${HADOOP_HOME}
+         export HADOOP_HDFS_HOME=${HADOOP_HOME}
+         export YARN_HOME=${HADOOP_HOME}
+         export HADOOP_CONF_DIR=$HADOOP_HOME/etc/hadoop
+         export SPARK_HOME=/usr/local/spark
+         export PYSPARK_PYTHON=python3
+         export PATH=$PATH:$SPARK_HOME/bin
+         export LD_LIBRARY_PATH=$HADOOP_HOME/lib/native:$LD_LIBRARY_PATH
+         export PYTHONPATH=$SPARK_HOME/python:$SPARK_HOME/python/build:$PYTHONPATH
+         export ZOO_HOME=/usr/local/zookeeper-3.4.6
+         export PATH=$ZOO_HOME/bin:$PATH
+          function sparknotebook()
+          {
+          export PYSPARK_PYTHON=python3
+          export SPARK_HOME=/usr/local/spark
+          export PYSPARK_DRIVER_PYTHON=jupyter
+          export PYSPARK_DRIVER_PYTHON_OPTS="notebook"
+          $SPARK_HOME/bin/pyspark --packages databricks:spark-deep-learning:1.5.0-spark2.4-s_2.11
+          }         
+       backup: yes     
 - hosts: amazon_1
   become: yes
   tasks:
