--- a/zookeeper.yml
+++ b/zookeeper.yml
@@ -1,32 +1,32 @@
 - hosts: amazon_*
   become: yes
   tasks:
-   - name: Run the equivalent of "apt-get update" as a separate step
-     apt:
-       update_cache: yes
+ #  - name: Run the equivalent of "apt-get update" as a separate step
+ #    apt:
+ #      update_cache: yes
 
-   - name: Get apache zookeeper
-     get_url: 
-       url: https://archive.apache.org/dist/zookeeper/zookeeper-3.4.14/zookeeper-3.4.14.tar.gz
-       dest: /home/ubuntu
-   - name: Extract  zookeeper
-     ansible.builtin.unarchive:
-       src: /home/ubuntu/zookeeper-3.4.14.tar.gz
-       dest: /home/ubuntu
-       remote_src: True
-       owner: ubuntu       
-   - name: changing name
-     raw: mv zookeeper-3.4.14 zookeeper
-   - name: Transferring files to usr/local directory
-     raw: sudo rm -f -r /usr/local/zookeeper     
-   - name: Transferring files to usr/local directory
-     raw: mv zookeeper /usr/local/zookeeper
-   - name: creating data directory
-     raw: mkdir /usr/local/zookeeper/data  
-   - name: creating myid file
-     raw: sudo touch /usr/local/zookeeper/data/myid
-   - name: creating zoo.cfg file
-     raw: sudo touch /usr/local/zookeeper/conf/zoo.cfg 
+  # - name: Get apache zookeeper
+  #   get_url: 
+  #     url: https://archive.apache.org/dist/zookeeper/zookeeper-3.4.14/zookeeper-3.4.14.tar.gz
+  #     dest: /home/ubuntu
+  # - name: Extract  zookeeper
+  #   ansible.builtin.unarchive:
+  #     src: /home/ubuntu/zookeeper-3.4.14.tar.gz
+  #    dest: /home/ubuntu
+  #     remote_src: True
+  #     owner: ubuntu       
+  # - name: changing name
+  #   raw: mv zookeeper-3.4.14 zookeeper
+  # - name: Transferring files to usr/local directory
+  #   raw: sudo rm -f -r /usr/local/zookeeper     
+  # - name: Transferring files to usr/local directory
+  ##   raw: mv zookeeper /usr/local/zookeeper
+   #- name: creating data directory
+   ##  raw: mkdir /usr/local/zookeeper/data  
+   #- name: creating myid file
+  #   raw: sudo touch /usr/local/zookeeper/data/myid
+  # - name: creating zoo.cfg file
+  #   raw: sudo touch /usr/local/zookeeper/conf/zoo.cfg 
    - name: Editing zoo.cfg File
      ansible.builtin.blockinfile:
        dest: /usr/local/zookeeper/conf/zoo.cfg
@@ -35,19 +35,19 @@
          syncLimit = 5
          dataDir = /usr/local/zookeeper/data
          clientPort= 2181
-         server.1 = ec2-54-221-172-176.compute-1.amazonaws.com : 2888 : 3888
-         server.2 = ec2-18-207-151-68.compute-1.amazonaws.com : 2888 : 3888
-         server.3 = ec2-54-242-196-207.compute-1.amazonaws.com : 2888 : 3888
+         server.1 = ec2-54-87-14-85.compute-1.amazonaws.com : 2888 : 3888
+         server.2 = ec2-18-215-157-9.compute-1.amazonaws.com : 2888 : 3888
+         server.3 = ec2-54-86-137-207.compute-1.amazonaws.com : 2888 : 3888
        backup: yes
        owner: ubuntu 
-   - name: USER rights owning bin
-     raw: sudo chown $USER:$USER /usr/local/zookeeper/bin 
+  # - name: USER rights owning bin
+  #   raw: sudo chown $USER:$USER /usr/local/zookeeper/bin 
 - hosts: amazon_1
   become: yes
   tasks:
    - name: Editing MYID File
      ansible.builtin.blockinfile:
-       dest: /usr/local/zookeeper/conf/zoo.cfg
+       dest: /usr/local/zookeeper/data/myid
        block: |
          1
        backup: yes
@@ -57,7 +57,7 @@
   tasks:
    - name: Editing MYID file
      ansible.builtin.blockinfile:
-       dest: /usr/local/zookeeper/conf/zoo.cfg
+       dest: /usr/local/zookeeper/data/myid
        block: |
          2
        backup: yes
@@ -67,7 +67,7 @@
   tasks:
    - name: Editing MYID file
      ansible.builtin.blockinfile:
-       dest: /usr/local/zookeeper/conf/zoo.cfg
+       dest: /usr/local/zookeeper/data/myid
        block: |
          3
        backup: yes
