--- a/zookeeper.yml
+++ b/zookeeper.yml
@@ -32,6 +32,8 @@
        dest: /home/ubuntu
        remote_src: True
        owner: ubuntu
+   - name: removing existing drill
+     raw: rm -r -f /etc/zookeeper/data
    - name: Make dir data
      raw: sudo mkdir /etc/zookeeper/data/
    - name: removing existing drill
