--- a/googleconfhadoop.yml
+++ b/googleconfhadoop.yml
@@ -10,7 +10,7 @@
        block: |
          <property>
          <name>fs.defaultFS</name>
-         <value>hdfs://ec2-52-90-51-230.compute-1.googleaws.com:9000</value>
+         <value>hdfs://34.134.85.167:9000</value>
          </property>
        backup: yes
        owner: suhailmsu21
@@ -24,7 +24,7 @@
        block: |
          <property>
          <name>mapred.job.tracker</name>
-         <value>ec2-52-90-51-230.compute-1.googleaws.com:54311</value>
+         <value>34.134.85.167:54311</value>
          </property>
          <property>
          <name>mapreduce.framework.name</name>
@@ -77,7 +77,7 @@
          </property>
          <property>
          <name>yarn.resourcemanager.hostname</name>
-         <value>ec2-52-90-51-230.compute-1.googleaws.com</value>
+         <value>34.134.85.167</value>
          </property>
        backup: yes
        owner: suhailmsu21
@@ -97,7 +97,7 @@
        dest: /usr/local/hadoop/etc/hadoop/masters
        insertafter: EOF
        block: |
-         ec2-52-90-51-230.compute-1.googleaws.com
+         34.134.85.167
        backup: yes
        owner: suhailmsu21
 
@@ -107,7 +107,7 @@
        dest: /usr/local/hadoop/etc/hadoop/workers
        insertafter: EOF
        block: |
-         ec2-44-202-20-34.compute-1.googleaws.com
+         35.202.11.97
        backup: yes
        owner: suhailmsu21
 
